# New_Energy_Sys

./: .env.example  .gitignore  .tmp_csi_plan.md  .tmp_phase12_results.md  CLAUDE.md  PROGRESS.md  README.md  WORKLOG.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_display_schema.py
backend/: README.md  __init__.py
backend/app/: __init__.py  auth.py  data_loader.py  database.py  db_importer.py  db_models.py  db_repository.py  display_data.py  main.py  tasks.py  weather_experiment.py
configs/: data_sources.example.json  data_sources.nrel_opsd.json  data_sources.nrel_opsd_weather.json  data_sources.pvdaq_hrrr_strict_2022_01_f24.json  data_sources.pvdaq_nsrdb_2020_2022.json  data_sources.pvdaq_nsrdb_2022_2023.json  data_sources.pvdaq_openmeteo_forecast.json  data_sources.pvdaq_openmeteo_forecast_2022_2023.json  data_sources.rawhide_prairie_scaled_2020_2022.json  market_price_scenarios.stage21a.json  weather_forecast_upgrade.two_level.json
docs/: battery_simulation_method.md  frontend_explanation_script.md  frontend_issue_fix_plan.md  frontend_production_handover.md  frontend_walkthrough.md  production_deployment_guide.md  reports_index.md
docs/archive/frontend_old/: frontend_review_plan.md  frontend_task.md  frontend_walkthrough.md
docs/archive/plans_old/: api_frontend_design_guide.md  project_comprehensive_guide.md  project_learning_guide.md  project_plan.md  startup_troubleshooting.md
docs/archive/thesis_old/: thesis_section_2_3_enhanced.md  开题报告.md
docs/archive/weather_hrrr/: HRRR三年并行抽取计划.md  hrrr_pv_forecast_design_review_suggestions.md
docs/current/: CODE_READING_MAP.md  CURRENT_EVIDENCE.md  START_HERE.md
docs/superpowers/plans/: 2026-05-03-hrrr-pv-forecast-pipeline.md
docs/superpowers/specs/: 2026-05-03-hrrr-pv-forecast-pipeline-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/scripts/: check-build-artifacts.mjs  static-check.mjs
frontend/src/: App.vue  main.js
frontend/src/charts/: chartTheme.js  dataExplorerCharts.js  dispatchCharts.js  governanceCharts.js  inspectionCharts.js  modelCharts.js  overviewCharts.js
frontend/src/components/: ChartCard.vue  InsightSummary.vue  MetricCard.vue  MetricGrid.vue  PageSection.vue  PageState.vue
frontend/src/router/: index.js
frontend/src/services/: dataExplorerService.js  dispatchService.js  governanceService.js  inspectionService.js  modelService.js  overviewService.js  reportService.js
frontend/src/stores/: authState.js
frontend/src/styles/: global.css  variables.css
frontend/src/utils/: api.js  currency.js  displayLabels.js  echarts-theme.js  markdown.js  siteTime.js
frontend/src/views/: DataExplorer.vue  DispatchSimulation.vue  GovernanceAnalysis.vue  InspectionDashboard.vue  Login.vue  ModelComparison.vue  OverviewDashboard.vue  ReportViewer.vue
frontend/tests/e2e/: demo-video.spec.js  frontend.spec.js
reports/: anomaly_daytime_low_power_samples.csv  anomaly_diagnosis.md  hrrr_forecast_error_diagnosis.md  module_progress_assessment_2026-05-05.md  project_status_2026-05-05.md  pvdaq_nsrdb_2020_2022_progress_report.md  pvdaq_nsrdb_progress_report.md  pvdaq_openmeteo_stage1_stage3_progress_report.md  session_2026-05-03_irradiance_decomp_and_prediction_design.md  stage1_stage2_progress_report.md  stage21a_rawhide_weather_market_feasibility_report.md  stage22_degradation_aware_config_report_2026-05-10.md  stage22b_economic_sensitivity_report_2026-05-11.md  stage23_scenario_dispatch_showcase_report_2026-05-11.md  stage7_forecast_weather_progress_report.md  task_report_policy_distillation_replay_2026-05-10.md  technical_report_2026-05-03_irradiance_and_hrrr_pv_pipeline.md  technical_report_2026-05-04_csi_and_quantile.md  technical_report_2026-05-04_feature_enhancement_and_roadmap.md  technical_report_2026-05-04_stage20_dispatch_dl.md  thesis_final_writing_handoff_2026-05-07.md  深度学习储能优化调度研究.md
scripts/: analyze_stage22b_boundary.py  api_smoke_frontend_contract.py  compare_hrrr_pv_baselines.py  diagnose_anomaly_samples.py  diagnose_hrrr_forecast_error.py  fixup_inspection_predictions.py  generate_pvdaq_nsrdb_progress_report.py  generate_stage_report_figures.py  generate_stratified_eval_report.py  generate_weather_stage_report.py  precompute_inspection_predictions.py  reformat_thesis_docx.py  rewrite_thesis_aigc.py  scale_rawhide_predictions.py  test_stage22_smoke.py  test_stage22b_regression.py  validate_decomposition_nsrdb.py
src/new_energy_sys/: __init__.py  cleaning.py  config.py  csi_utils.py  data_sources.py  deep_sequence_modeling.py  feature_enhancements.py  features.py  hrrr.py  hrrr_feature_aligner.py  hrrr_point_forecast.py  hrrr_probe_contract.py  hrrr_stage7_contract.py  io_utils.py  irradiance_decomposition.py  modeling.py  optimization.py  sequence_modeling.py  stage11_storage_strategy.py  stage12_storage_rolling.py  stage13_storage_governance.py  stage15_storage_sensitivity.py  stage17_battery_degradation.py  stage18_rawhide_simulation.py  stage20_neural_dispatch.py  stage21_rawhide_weather_dispatch.py  stage22_degradation_aware_config.py  stage23_scenario_dispatch_showcase.py  stage7_forecast_validation.py  stage9_inference.py  standardize.py  storage.py  tabular_comparison.py
tests/: test_hrrr_feature_aligner.py  test_irradiance_decomposition.py  test_mysql_display_repository.py  test_showcase_api.py  test_stage20_neural_dispatch.py  test_stage21_market_scenarios.py  test_stage23_scenario_showcase.py  test_storage_dispatch_core.py  test_weather_experiment_api.py
tests/fixtures/: stage21_rawhide_weather_sample.csv
thesis/: main.tex  文献综述_补写.md  问题汇总.txt
thesis/tools/: redraw_fixed_thesis_figures.py
(+75 files in other folders)
