[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "new-energy-sys"
version = "0.1.0"
description = "PV forecasting and energy storage dispatch prototype."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "requests>=2.31.0",
  "pyarrow>=15.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "lightgbm>=4.6.0",
  "scikit-learn>=1.4.0",
  "zarr>=3.1.0",
  "numcodecs>=0.16.1",
  "s3fs>=2024.0.0",
  "xarray>=2024.0.0",
  "torch>=2.0.0",
  "xgboost>=2.0.0",
  "catboost>=1.2.0",
  "SQLAlchemy>=2.0.0",
  "PyMySQL>=1.1.0",
  "alembic>=1.13.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[project.scripts]
new-energy-bootstrap-data = "new_energy_sys.cli.bootstrap_data:main"
new-energy-clean-data = "new_energy_sys.cli.clean_data:main"
new-energy-build-features = "new_energy_sys.cli.build_features:main"
new-energy-train-baseline = "new_energy_sys.cli.train_baseline:main"
new-energy-optimize-lightgbm = "new_energy_sys.cli.optimize_lightgbm:main"
new-energy-train-tcn = "new_energy_sys.cli.train_tcn:main"
new-energy-run-stage7 = "new_energy_sys.cli.run_stage7:main"
new-energy-compare-tabular-models = "new_energy_sys.cli.compare_tabular_models:main"
new-energy-run-stage9-inference = "new_energy_sys.cli.run_stage9_inference:main"
new-energy-run-stage10-dispatch = "new_energy_sys.cli.run_stage10_dispatch:main"
new-energy-run-stage11-strategy = "new_energy_sys.cli.run_stage11_strategy:main"
new-energy-run-stage12-rolling = "new_energy_sys.cli.run_stage12_rolling:main"
new-energy-run-stage13-governance = "new_energy_sys.cli.run_stage13_governance:main"
new-energy-run-stage14-deep-learning = "new_energy_sys.cli.run_stage14_deep_learning:main"
new-energy-run-stage15-sensitivity = "new_energy_sys.cli.run_stage15_sensitivity:main"
new-energy-run-stage17-battery-degradation = "new_energy_sys.cli.run_stage17_battery_degradation:main"
new-energy-run-stage18-rawhide-simulation = "new_energy_sys.cli.run_stage18_rawhide_simulation:main"
new-energy-run-stage21-rawhide-weather-dispatch = "new_energy_sys.cli.run_stage21_rawhide_weather_dispatch:main"
new-energy-run-stage22-degradation-aware-config = "new_energy_sys.cli.run_stage22_degradation_aware_config:main"
new-energy-run-stage22b-economic-sensitivity = "new_energy_sys.cli.run_stage22b_economic_sensitivity:main"
new-energy-run-stage23-scenario-dispatch-showcase = "new_energy_sys.cli.run_stage23_scenario_dispatch_showcase:main"
new-energy-prepare-forecast-weather = "new_energy_sys.cli.prepare_forecast_weather:main"
new-energy-prepare-hrrr-sample = "new_energy_sys.cli.prepare_hrrr_sample:main"
new-energy-prepare-hrrr-month = "new_energy_sys.cli.prepare_hrrr_month:main"
new-energy-prepare-hrrr-point-forecast = "new_energy_sys.cli.prepare_hrrr_point_forecast:main"
new-energy-prepare-hrrr-point-forecast-manifest = "new_energy_sys.cli.prepare_hrrr_point_forecast_manifest:main"
new-energy-prepare-hrrr-point-forecast-monthly-manifests = "new_energy_sys.cli.prepare_hrrr_point_forecast_monthly_manifests:main"
new-energy-prepare-hrrr-strict-probe-manifest = "new_energy_sys.cli.prepare_hrrr_strict_probe_manifest:main"
new-energy-run-hrrr-point-forecast-batch = "new_energy_sys.cli.run_hrrr_point_forecast_batch:main"
new-energy-merge-hrrr-point-forecast-batches = "new_energy_sys.cli.merge_hrrr_point_forecast_batches:main"
new-energy-validate-hrrr-probe-contract = "new_energy_sys.cli.validate_hrrr_probe_contract:main"
new-energy-validate-hrrr-stage7-contract = "new_energy_sys.cli.validate_hrrr_stage7_contract:main"
new-energy-import-display-data-to-mysql = "new_energy_sys.cli.import_display_data_to_mysql:main"

[tool.setuptools.packages.find]
where = ["src"]
